fix: change todo text color to black for better contrast

--- a/src/components/Todo.module.css
+++ b/src/components/Todo.module.css
@@ -1,8 +1,3 @@
-.active {
-  color: #2c3e50;
-}
-
 .completed {
-  color: #95a5a6;
   text-decoration: line-through;
 }
